<resources>

    <string name="app_name">Random Number Generator</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Random Number Generator</string>
    <string name="message">Input a range of two numbers for generate a random number.</string>
    <string name="minimum_number">Min Value:</string>
    <string name="maxium_number">Max Value:</string>
    <string name="generate">Generate</string>
    <string name="decimal_enable">Enable decimal numbers.</string>
    <string name="dialog_title">Number Range Error</string>
    <string name="dialog_message">The Max Value is less than the Min Value.</string>
    <string name="quantity">Quantity to Generate:</string>
    <string name="random_number">Random Number:</string>
    <string name="random_numbers">Random Numbers:</string>
    <string name="menu_about">About</string>
    <string name="copyright">Random Number Generator\n\nCopyright (C) 2012:\n    Darksoft Foundation,\n    Joel Peláez Jorge</string>
    <string name="about_title">About...</string>
    <string name="number_error_title">Number Error</string>
    <string name="number_error_message">Intro a number.</string>

</resources>